MBS-1904: fixed alignment of license information

--- a/filter/mbslicenseinfo/styles.css
+++ b/filter/mbslicenseinfo/styles.css
@@ -1,3 +1,7 @@
 .licenseinfo {
     font-size: 0.8em;
 }
+
+figure.atto_image_button_right  figcaption {
+    margin-left: 0.5em;
+}
